build/log/idf_py_stderr_output_47568
/home/pi/remoteLED/main/remoteLED.c: In function 'app_main':
/home/pi/remoteLED/main/remoteLED.c:96:5: error: implicit declaration of function 'get_auth_token' [-Wimplicit-function-declaration]
   96 |     get_auth_token();  // **Fetch Token Securely**
      |     ^~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c: At top level:
/home/pi/remoteLED/main/remoteLED.c:20:20: warning: 'TAG' defined but not used [-Wunused-variable]
   20 | static const char *TAG = "ESP32_SSL";
      |                    ^~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
